[package]
name = "two-party-ecdsa-workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa.git", rev = "3e711c7" }
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
sha2 = "0.9"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false